Simplify OOP domain models and remove dead code.
Trim unused fields, methods, and constructors across the console app while keeping transaction flow and reporting behavior intact.

Made-with: Cursor