@@ -3,39 +3,54 @@ package service;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import model.Category;
 import model.Transaction;
 import model.Transaction.TransactionType;
+import model.accounts.Account;
 
 public class TransactionService {
     private final List<Transaction> transactions;
 
     public TransactionService() {
-        this.transactions = new ArrayList<Transaction>();
+        this.transactions = new ArrayList<>();
     }
 
-    public void createTransaction(TransactionType type, String fromAccountId, String toAccountId, double amount, String description, String categoryName) {
-        validateCommon(type, amount, description);
-        validateByType(type, fromAccountId, toAccountId, categoryName);
-
-        LocalDateTime now = LocalDateTime.now();
-        Transaction tx;
-        switch (type) {
-            case INCOME -> {
-                Category category = new Category(categoryName, Category.CategoryType.INCOME, null, null);
-                tx = Transaction.income(amount, now, toAccountId, category, description);
-            }
-            case EXPENSE -> {
-                Category category = new Category(categoryName, Category.CategoryType.EXPENSE, null, null);
-                tx = Transaction.expense(amount, now, fromAccountId, category, description);
-            }
-            case TRANSFER -> tx = Transaction.transfer(amount, now, fromAccountId, toAccountId, description);
-            default -> throw new TransactionException("Unsupported transaction type: " + type);
+    public void recordIncome(Account toAccount, double amount, Category category, String description) {
+        validateAmountAndDescription(amount, description);
+        if (toAccount == null) {
+            throw new TransactionException("Income requires a destination account.");
         }
+        if (category == null || !category.isIncomeCategory()) {
+            throw new TransactionException("Income requires an income category.");
+        }
+        toAccount.deposit(amount);
+        transactions.add(Transaction.income(amount, LocalDateTime.now(), toAccount.getId(), category, description));
+    }
 
-        transactions.add(tx);
+    public void recordExpense(Account fromAccount, double amount, Category category, String description) {
+        validateAmountAndDescription(amount, description);
+        if (fromAccount == null) {
+            throw new TransactionException("Expense requires a source account.");
+        }
+        if (category == null || !category.isExpenseCategory()) {
+            throw new TransactionException("Expense requires an expense category.");
+        }
+        fromAccount.withdraw(amount);
+        transactions.add(Transaction.expense(amount, LocalDateTime.now(), fromAccount.getId(), category, description));
+    }
+
+    public void transfer(Account fromAccount, Account toAccount, double amount, String description) {
+        validateAmountAndDescription(amount, description);
+        if (fromAccount == null || toAccount == null) {
+            throw new TransactionException("Transfer requires from and to accounts.");
+        }
+        if (fromAccount.getId().equals(toAccount.getId())) {
+            throw new TransactionException("Transfer accounts must be different.");
+        }
+        fromAccount.withdraw(amount);
+        toAccount.deposit(amount);
+        transactions.add(Transaction.transfer(amount, LocalDateTime.now(), fromAccount.getId(), toAccount.getId(), description));
     }
 
     public List<Transaction> getTransactionsForAccount(String accountId) {
@@ -46,43 +61,15 @@ public class TransactionService {
                 .filter(transaction ->
                         accountId.equals(transaction.getFromAccountId())
                                 || accountId.equals(transaction.getToAccountId()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private void validateCommon(TransactionType type, double amount, String description) {
-        if (type == null) {
-            throw new TransactionException("Transaction type is required.");
-        }
+    private void validateAmountAndDescription(double amount, String description) {
         if (amount <= 0) {
             throw new TransactionException("Amount must be positive.");
         }
         if (description == null || description.isBlank()) {
             throw new TransactionException("Description is required.");
-        }
-    }
-
-    private void validateByType(TransactionType type, String fromAccountId, String toAccountId, String categoryName) {
-        if (type == TransactionType.INCOME) {
-            if (toAccountId == null || toAccountId.isBlank()) {
-                throw new TransactionException("Income requires toAccountId.");
-            }
-            if (categoryName == null || categoryName.isBlank()) {
-                throw new TransactionException("Income requires category.");
-            }
-        } else if (type == TransactionType.EXPENSE) {
-            if (fromAccountId == null || fromAccountId.isBlank()) {
-                throw new TransactionException("Expense requires fromAccountId.");
-            }
-            if (categoryName == null || categoryName.isBlank()) {
-                throw new TransactionException("Expense requires category.");
-            }
-        } else if (type == TransactionType.TRANSFER) {
-            if (fromAccountId == null || fromAccountId.isBlank() || toAccountId == null || toAccountId.isBlank()) {
-                throw new TransactionException("Transfer requires fromAccountId and toAccountId.");
-            }
-            if (fromAccountId.equals(toAccountId)) {
-                throw new TransactionException("Transfer accounts must be different.");
-            }
         }
     }
 }
